--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -40,15 +40,15 @@
     "to": "до"
   },
   "banners": {
-    "home_banner": "Тестовый заголовок для главной страницы",
-    "mortgage_banner": "Тестовый заголовок для странциы ипотеки",
-    "career_banner": "Тестовый заголовок для странциы карьеры",
-    "about_banner": "Тестовый заголовок для странциы о нас"
+    "home_banner": "Топ 100 квартир под ваши желания из нашей эксклюзивной базы",
+    "mortgage_banner": "Рассчитайте стоимость ипотеки под вашу квартиру ",
+    "career_banner": "Станьте частью международной компании",
+    "about_banner": "\"Витрина Недвижимости\" - самое крупное агентство недвижимости Казахстана!"
   },
   "description": {
-    "mortgage_descr": "Тестовое описание для баннера на странцие ипотеки",
-    "career_descr": "Тестовое описание для баннера на странцие карьеры",
-    "about_descr": "Тестовое описание для баннера на странцие о нас",
+    "mortgage_descr": "Жмите по кнопке снизу и получите точный рассчёт стоимости",
+    "career_descr": "Присоединяйтесь к дружной команде 'Витрина Недвижимости'",
+    "about_descr": "10 лет на рынке недвижимости - Более 1000 агентов по недвижимости в 7 городах, в 3 странах.",
     "currency": "сум"
   },
   "contents": {
@@ -75,7 +75,6 @@
       "Безлимитную связь (корпоративный номер)",
       "Рекламу и поддержку"
     ],
-
     "conditions_career": [
       "График работы с 10:00 до 18:00, гибкий рабочий день",
       "Неограниченный заработок",
