--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -40,15 +40,15 @@
     "to": "gacha"
   },
   "banners": {
-    "home_banner": "Тестовый заголовок для главной страницы",
-    "mortgage_banner": "Тестовый заголовок для странциы ипотеки",
-    "career_banner": "Тестовый заголовок для странциы карьеры",
-    "about_banner": "Тестовый заголовок для странциы о нас"
+    "home_banner": "Bizning eksklyuziv bazamizdan ozingizni xonadoningizni tanlang",
+    "mortgage_banner": "Xonadoningiz uchun ipoteka narxini hisoblang",
+    "career_banner": "Xalqaro kompaniyaning bir qismiga aylaning",
+    "about_banner": "\"Витрина Недвижимости\" Qozog'istondagi eng yirik ko'chmas mulk agentligidir!"
   },
   "description": {
-    "mortgage_descr": "Тестовое описание для баннера на странцие ипотеки",
-    "career_descr": "Тестовое описание для баннера на странцие карьеры",
-    "about_descr": "Тестовое описание для баннера на странцие о нас",
+    "mortgage_descr": "Quyidagi tugmani bosing va aniq to’lov hisobini oling",
+    "career_descr": "\"Витрина Недвижимости\"ning ahil jamoasiga qo'shiling",
+    "about_descr": "Ko'chmas mulk bozorida 10 yillik tajriba - 7 ta shahar, 3 ta davlatda 1000 dan ortiq ko'chmas mulk agentlari.",
     "currency": "so'm"
   },
   "contents": {
@@ -75,7 +75,6 @@
       "Cheksiz aloqa (korporativ raqam)",
       "Reklama va qollab quvatlash"
     ],
-
     "conditions_career": [
       "Ish vaqti 10:00 dan 19:00 gacha, moslachuvchan ish vaqti",
       "cheksiz daromadlariga",
