--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -129,5 +129,13 @@
     "about": "О нас",
     "apartament": "Карточка квартиры",
     "default": "Vitrina Project"
+  },
+  "titles": {
+    "home": "Главная",
+    "mortgage": "Ипотека",
+    "career": "Карьера",
+    "about": "О нас",
+    "apartament": "Объявления",
+    "error": "Ошибка"
   }
 }
