--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -137,5 +137,12 @@
     "about": "О нас",
     "apartament": "Объявления",
     "error": "Ошибка"
+  },
+  "repair": {
+    "with": "С ремонтом",
+    "without": "Без ремонта",
+    "designed": "Дизайнерский ремонт",
+    "rough": "Черновая",
+    "pre_finished": "Предчистовая"
   }
 }
