--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -142,7 +142,7 @@
     "with": "Ta’mirlangan",
     "without": "Ta’mirsiz",
     "designed": "Dizaynerlik ta’mir",
-    "rough": "Черновая",
+    "rough": "Qora Suvoq",
     "pre_finished": "Tugallanmagan ta’mir"
   }
 }
