--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -67,37 +67,41 @@
     "consultation_title_mortgage": "Заявка на консультацию",
     "consultation_descr_mortgage": "Оставьте заявку на консультацию или звоните нам по телефону:",
     "what_do_we_offer": "Что мы предлагаем",
-    "career_offer": "Присоединяйтесь к <span>«Витрине Недвижимости»</span> и развивайтесь вместе с нами!",
-    "list_offer": [
-      "Качественное экспресс-обучение за счет компании в течение первого месяца работы",
-      "Уютный офис в центре города со всем необходимым, дружный коллектив",
-      "Гарантированные бонусы за высокие показатели в работе, сдельную своевременную заработную плату",
-      "Безлимитную связь (корпоративный номер)",
-      "Рекламу и поддержку"
-    ],
-    "conditions_career": [
-      "График работы с 10:00 до 18:00, гибкий рабочий день",
-      "Неограниченный заработок",
-      "Один плавающий выходной в неделю (только в будние дни)",
-      "Обучение от одной недели до одного месяца"
-    ],
+    "career_offer": {
+      "join_message_part1": "Присоединяйтесь к",
+      "join_message_part2": "и развивайтесь вместе с нами!",
+      "brand_name": "«Витрина Недвижимости»"
+    },
+    "list_offer": {
+      "training": "Качественное экспресс-обучение за счет компании в течение первого месяца работы",
+      "office": "Уютный офис в центре города со всем необходимым, дружный коллектив",
+      "bonus": "Гарантированные бонусы за высокие показатели в работе, сдельную своевременную заработную плату",
+      "communication": "Безлимитную связь (корпоративный номер)",
+      "support": "Рекламу и поддержку"
+    },
+    "conditions_career": {
+      "working_hours": "График работы с 10:00 до 18:00, гибкий рабочий день",
+      "unlimited_income": "Неограниченный заработок",
+      "floating_day_off": "Один плавающий выходной в неделю (только в будние дни)",
+      "training_duration": "Обучение от одной недели до одного месяца"
+    },
     "why_us_title": "Почему мы?",
-    "why_us_list": [
-      "10 лет на рынке недвижимости",
-      "Более 1000 агентов по недвижимости в 7 городах, 3 странах",
-      "Продаем недвижимости на более чем $650 000 000 в год",
-      "Реализовываем более 8000 квартир в год"
-    ],
+    "why_us_list": {
+      "experience": "10 лет на рынке недвижимости",
+      "agents": "Более 1000 агентов по недвижимости в 7 городах, 3 странах",
+      "sales_volume": "Продаем недвижимости на более чем $650 000 000 в год",
+      "apartments_sold": "Реализовываем более 8000 квартир в год"
+    },
     "what_do_we_offer_why_us": "Мы предлагаем:",
-    "what_do_we_offer_why_us_list": [
-      "Покупка и продажа недвижимости в Ташкенте",
-      "Коммерческая недвижимость",
-      "База эксклюзивных объектов «ТОП100 лучших квартир Ташкента",
-      "Профессиональные фото и видеообзор",
-      "Платное продвижение эсклюзивных объектов за счёт компании",
-      "Элитные квартиры",
-      "Участки и частные дома"
-    ],
+    "what_do_we_offer_why_us_list": {
+      "buy_sell_property": "Покупка и продажа недвижимости в Ташкенте",
+      "commercial_property": "Коммерческая недвижимость",
+      "exclusive_top100": "База эксклюзивных объектов «ТОП100 лучших квартир Ташкента»",
+      "photo_video_review": "Профессиональные фото и видеообзор",
+      "paid_promotion": "Платное продвижение эксклюзивных объектов за счёт компании",
+      "elite_apartments": "Элитные квартиры",
+      "land_private_houses": "Участки и частные дома"
+    },
     "offer_why_us_list": [
       "Бесплатная консультация",
       "1% комиссии",
