maybe last deploy

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -153,5 +153,6 @@
     "designed": "Дизайнерский ремонт",
     "rough": "Черновая",
     "pre_finished": "Предчистовая"
-  }
+  },
+  "order": "Оставить заявку"
 }
