--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -145,7 +145,9 @@
     "career": "Карьера",
     "about": "О нас",
     "apartament": "Карточка квартиры",
-    "default": "Vitrina Project"
+    "default": "Vitrina Project",
+    "similar": "Похожие объявления",
+    "descr": "Описание"
   },
   "titles": {
     "home": "Главная",
