--- a/src/locales/uz.json
+++ b/src/locales/uz.json
@@ -145,7 +145,9 @@
     "career": "Karyera",
     "about": "Biz haqimizda",
     "apartament": "Xonadon kartasi",
-    "default": "Vitrina Project"
+    "default": "Vitrina Project",
+    "similar": "O‘xshash e’lonlar",
+    "descr": "Tavsif"
   },
   "titles": {
     "home": "Bosh sahifa",
