--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -43,7 +43,7 @@
     "home_banner": "Топ 100 квартир под ваши желания из нашей эксклюзивной базы",
     "mortgage_banner": "Рассчитайте стоимость ипотеки под вашу квартиру ",
     "career_banner": "Станьте частью международной компании",
-    "about_banner": "\"Витрина Недвижимости\" - самое крупное агентство недвижимости Казахстана!"
+    "about_banner": "Витрина Недвижимости — ваш надежный партнер на рынке недвижимости Ташкента."
   },
   "description": {
     "mortgage_descr": "Жмите по кнопке снизу и получите точный рассчёт стоимости",
@@ -90,7 +90,7 @@
       "experience": "10 лет на рынке недвижимости",
       "agents": "Более 1000 агентов по недвижимости в 7 городах, 3 странах",
       "sales_volume": "Продаем недвижимости на более чем $650 000 000 в год",
-      "apartments_sold": "Реализовываем более 8000 квартир в год"
+      "apartments_sold": "Подборка \"ТОП-100 лучших квартир Ташкента\" только самые проверенные и ликвидные объекты."
     },
     "what_do_we_offer_why_us": "Мы предлагаем:",
     "what_do_we_offer_why_us_list": {
@@ -149,7 +149,7 @@
     "similar": "Похожие объявления",
     "descr": "Описание",
     "show_number": "Показать номер",
-    "order_number":"Заказать звонок"
+    "order_number": "Заказать звонок"
   },
   "titles": {
     "home": "Главная",
@@ -166,5 +166,14 @@
     "rough": "Черновая",
     "pre_finished": "Предчистовая"
   },
-  "order": "Оставить заявку"
+  "order": "Оставить заявку",
+  "company": {
+    "title": "Витрина Недвижимости — ваш надежный партнер на рынке недвижимости Ташкента.",
+    "text1": "Мы не просто размещаем тысячи объектов, ведь это может сделать каждый. Наши профессионалы с более чем 10-летним опытом проводят полную юридическую проверку, анализ ликвидности и тщательную верификацию документов, чтобы вы могли быть уверены в безопасности своих средств.",
+    "text2": "В нашу эксклюзивную подборку \"ТОП-100 лучших квартир Ташкента\" входят только самые проверенные и ликвидные объекты.",
+    "text3": "С нами одобрение ипотеки на 35% выше. Наш колоссальный опыт и сеть из свыше 8000 агентов в странах СНГ помогают нам быть крупнейшим агентством на международном уровне.",
+    "text4": "Удобная платформа позволит вам подобрать квартиру в 1 клик, под ваш бюджет и потребности, с бонусной консультацией от специалиста и юридическим сопровождением сделки.",
+    "text5": "Перестаньте тратить время на бесконечный поиск и рисковать своими средствами на сомнительных площадках. Доверьтесь профессионалам, которые являются членами Гильдии риелторов и входят в Ассоциацию риелторов Узбекистана. Мы также сертифицированы Агентством по Управлению Государственными Активами.",
+    "title2": "\"Витрина Недвижимости\" — качество, проверенное экспертами, доступное вам уже сегодня."
+  }
 }
